# fubot

./: .coverage  .gitignore  COMMUNICATION.md  Dockerfile  LICENSE  README.md  SECURITY.md  core_agent_lines.sh  docker-compose.yml  pyproject.toml
bridge/: package-lock.json  package.json
bridge/src/: index.ts  whatsapp.ts
echo_agent/: __main__.py  runtime_paths.py
echo_agent/a2a/: __init__.py  client.py  models.py  protocol.py  server.py
echo_agent/agent/: context.py  loop.py
echo_agent/bus/: events.py
echo_agent/channels/: base.py  cli.py  discord.py  manager.py  matrix.py  qqbot.py  qqbot_media.py  slack.py  telegram.py  weixin.py
echo_agent/cli/: setup.py  status.py
echo_agent/config/: default.yaml  loader.py  schema.py
echo_agent/evaluation/: __init__.py  dataset.py  metrics.py  reporter.py  runner.py
echo_agent/gateway/: auth.py  server.py  session_policy.py
echo_agent/knowledge/: __init__.py  index.py
echo_agent/mcp/: manager.py  security.py  tool_adapter.py  transport.py
echo_agent/memory/: consolidator.py  contradiction.py  forgetting.py  graph.py  prefetch.py  retrieval.py  reviewer.py  (+4 more)
fubot/: __init__.py  __main__.py
runtime/: config.json
scripts/: install.sh
tests/: test_azure_openai_provider.py  test_base_channel.py  test_bus.py  test_channel_features.py  test_cli_input.py  test_commands.py  test_compression.py  test_config_loader.py  test_config_migration.py  test_config_paths.py  test_consolidate_offset.py  test_context_builder.py  test_context_prompt_cache.py  test_cron_service.py  test_dingtalk_channel.py  test_docker.sh  test_email_channel.py  test_executor_tools.py  test_feishu_post_content.py  test_feishu_table_split.py  test_filesystem_tools.py  test_gateway_advanced.py  test_gateway_auth.py  test_gemini_thought_signature.py  test_heartbeat_service.py  test_knowledge.py  test_loop_consolidation_tokens.py  test_loop_save_turn.py  test_matrix_channel.py  test_mcp_security.py  test_mcp_tool.py  test_memory_advanced.py  test_memory_consolidation_types.py  test_memory_reviewer.py  test_message_tool.py  test_message_tool_suppress.py  test_model_router.py  test_model_routing.py  test_models_advanced.py  test_multi_agent.py  (+20 more)
(+147 files in other folders)
